# pytodo

./: .editorconfig  .gitignore  README.md  manual-tests.sh  pyproject.toml
src/pytodo/: __init__.py  __main__.py  cli.py  database.py  main.py  model.py
test/: test_main.py
